# modern-cmake-sample

./: .gitignore  LICENSE.md  README.md
example_exec/: CMakeLists.txt
example_exec/src/: main.cpp
libjsonutils/: CMakeLists.txt  GNUmakefile  use-target
libjsonutils/cmake/: FindRapidJSON.cmake  Findboost_regex.cmake  GoogleTest-CMakeLists.txt.in  JSONUtilsConfig.cmake.in
libjsonutils/include/jsonutils/: json_utils.h
libjsonutils/src/: file_utils.h  json_utils.cpp
libjsonutils/test/: CMakeLists.txt
libjsonutils/test/src/: main.cpp
